// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav>
        <nav
          class="navbar navbar-expand-lg bg-secondary fixed-top"
          full="true"
        >
          <div
            class="container-fluid"
          >
            <a
              class="brand navbar-brand"
            >
              <img
                alt="Logo"
                class="chronic-logo"
                src="/src/assets/Chronic.png"
              />
              <h6
                class="logo-text"
              >
                CHRONIC
              </h6>
            </a>
            <ul
              class="nav"
            >
              <a
                class="nav-link"
                href="/about"
              >
                About
              </a>
              <button
                class="nav-link"
              >
                Login
              </button>
              <button
                class="nav-link"
              >
                Signup
              </button>
            </ul>
          </div>
        </nav>
      </nav>
      <div
        class="p-0 container-fluid"
      >
        <div
          class="navbar-space m-0 p-0 row"
        />
        <div
          class="main-body m-0 p-0 row"
        >
          <div
            class="home col-9"
          >
            <div
              class="out-home-page"
            >
              <div
                class="hero-text"
              >
                Your Health. Your Data. Your Power.
              </div>
              <img
                alt="Logo"
                class="hero-image"
                src="/src/assets/Chronic_dark.png"
              />
              <div
                class="hero-text"
              >
                CHRONIC
              </div>
            </div>
          </div>
          <div
            class="sidebar col-3"
          >
            <a
              href="/latest"
            >
              <h2
                class="latest-head"
              >
                The Latest
              </h2>
            </a>
            <div
              class="articles-sidebar"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav>
      <nav
        class="navbar navbar-expand-lg bg-secondary fixed-top"
        full="true"
      >
        <div
          class="container-fluid"
        >
          <a
            class="brand navbar-brand"
          >
            <img
              alt="Logo"
              class="chronic-logo"
              src="/src/assets/Chronic.png"
            />
            <h6
              class="logo-text"
            >
              CHRONIC
            </h6>
          </a>
          <ul
            class="nav"
          >
            <a
              class="nav-link"
              href="/about"
            >
              About
            </a>
            <button
              class="nav-link"
            >
              Login
            </button>
            <button
              class="nav-link"
            >
              Signup
            </button>
          </ul>
        </div>
      </nav>
    </nav>
    <div
      class="p-0 container-fluid"
    >
      <div
        class="navbar-space m-0 p-0 row"
      />
      <div
        class="main-body m-0 p-0 row"
      >
        <div
          class="home col-9"
        >
          <div
            class="out-home-page"
          >
            <div
              class="hero-text"
            >
              Your Health. Your Data. Your Power.
            </div>
            <img
              alt="Logo"
              class="hero-image"
              src="/src/assets/Chronic_dark.png"
            />
            <div
              class="hero-text"
            >
              CHRONIC
            </div>
          </div>
        </div>
        <div
          class="sidebar col-3"
        >
          <a
            href="/latest"
          >
            <h2
              class="latest-head"
            >
              The Latest
            </h2>
          </a>
          <div
            class="articles-sidebar"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`matches the snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav>
        <nav
          class="navbar navbar-expand-lg bg-secondary fixed-top"
          full="true"
        >
          <div
            class="container-fluid"
          >
            <a
              class="brand navbar-brand"
            >
              <img
                alt="Logo"
                class="chronic-logo"
                src="/src/assets/Chronic.png"
              />
              <h6
                class="logo-text"
              >
                CHRONIC
              </h6>
            </a>
            <ul
              class="nav"
            >
              <a
                class="nav-link"
                href="/about"
              >
                About
              </a>
              <button
                class="nav-link"
              >
                Login
              </button>
              <button
                class="nav-link signup"
              >
                Signup
              </button>
            </ul>
          </div>
        </nav>
      </nav>
      <div
        class="p-0 container-fluid"
      >
        <div
          class="navbar-space m-0 p-0 row"
        />
        <div
          class="main-body m-0 p-0 row"
        >
          <div
            class="home col-9"
          >
            <div
              class="out-home-page"
            >
              <div
                class="hero-text"
              >
                Your Health. Your Data. Your Power.
              </div>
              <img
                alt="Logo"
                class="hero-image"
                src="/src/assets/Chronic_dark.png"
              />
              <div
                class="hero-text"
              >
                CHRONIC
              </div>
            </div>
          </div>
          <div
            class="sidebar col-3"
          >
            <a
              href="/latest"
            >
              <h2
                class="latest-head"
              >
                The Latest
              </h2>
            </a>
            <div
              class="articles-sidebar"
            >
              <p>
                An error occurred. Please try again later
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav>
      <nav
        class="navbar navbar-expand-lg bg-secondary fixed-top"
        full="true"
      >
        <div
          class="container-fluid"
        >
          <a
            class="brand navbar-brand"
          >
            <img
              alt="Logo"
              class="chronic-logo"
              src="/src/assets/Chronic.png"
            />
            <h6
              class="logo-text"
            >
              CHRONIC
            </h6>
          </a>
          <ul
            class="nav"
          >
            <a
              class="nav-link"
              href="/about"
            >
              About
            </a>
            <button
              class="nav-link"
            >
              Login
            </button>
            <button
              class="nav-link signup"
            >
              Signup
            </button>
          </ul>
        </div>
      </nav>
    </nav>
    <div
      class="p-0 container-fluid"
    >
      <div
        class="navbar-space m-0 p-0 row"
      />
      <div
        class="main-body m-0 p-0 row"
      >
        <div
          class="home col-9"
        >
          <div
            class="out-home-page"
          >
            <div
              class="hero-text"
            >
              Your Health. Your Data. Your Power.
            </div>
            <img
              alt="Logo"
              class="hero-image"
              src="/src/assets/Chronic_dark.png"
            />
            <div
              class="hero-text"
            >
              CHRONIC
            </div>
          </div>
        </div>
        <div
          class="sidebar col-3"
        >
          <a
            href="/latest"
          >
            <h2
              class="latest-head"
            >
              The Latest
            </h2>
          </a>
          <div
            class="articles-sidebar"
          >
            <p>
              An error occurred. Please try again later
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
